[project]
name = "nocoexport"
version = "0.1.0"
description = "Program allows export database created in nocoDB app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.scripts]
nocoexport = "nocoexport.cli:cli"
